Mofication de la documentation pour inclure le démarrage des 2 services de l'application via le terminal