@@ -55,65 +55,133 @@ Gnotes est une application de bureau métier développée en **JavaFX** permetta
 *   `gnoteFX1.2/user_data.json` : Base de données locale générée au format JSON.
 *   `gnoteFX1.2/IpApi.yml` : Fichier de configuration spécifiant l'URL de base de l'API.
 
-### 🚀 Installation & Exécution
+## 🚀 Guide d'Installation
 
-#### Prérequis
-*   Avoir **Java 11** (ou plus récent) installé et configuré (JDK).
-*   Avoir **Maven** installé.
+### 📋 Prérequis
 
-#### Compiler et exécuter le projet
+Avant de commencer, assurez-vous d'avoir installé les outils suivants sur votre machine :
 
-Cloner (ou ouvrir) ce projet et ouvrir un terminal dans le dossier `gnoteFX1.2` :
+- **WAMP** (ou XAMPP) : Serveur local pour la base de données MySQL.
+- **Java (JDK 21)** : Version recommandée pour le support de JavaFX 21.
+- **Maven** : Gestionnaire de dépendances pour les projets Java.
+- **Git** : Pour cloner le dépôt (optionnel).
 
-1. **Compiler l'application :**
-   ```bash
-   mvn clean compile
-   ```
+### Installation de WAMP
 
-2. **Lancer l'application :**
-   ```bash
-   mvn javafx:run
-   ```
+1. Téléchargez WAMP depuis le site officiel : [https://www.wampserver.com/](https://www.wampserver.com/)
+2. Installez WAMP en suivant les instructions d'installation.
+3. Lancez WAMP et assurez-vous que le service **MySQL** est démarré (icône verte).
 
-#### Construire un exécutable (JAR)
+### Installation du JDK & Maven (Méthode Propre)
 
-Un plugin Assembly est configuré pour packager l'application avec toutes ses dépendances dans un seul fichier :
+Pour que le projet fonctionne sans erreur (notamment l'erreur `--add-exports`), vous **devez** utiliser le **JDK 21**.
 
-```bash
-mvn clean package
+#### 1. Installer le JDK 21
+Le plus simple est d'utiliser `winget` (le gestionnaire de paquets Windows) ou de télécharger l'installeur :
+*   **Via Terminal (Recommandé) :** Ouvrez un terminal et tapez :
+    ```powershell
+    winget install Microsoft.OpenJDK.21
+    ```
+*   **Via Téléchargement :** [Microsoft OpenJDK 21](https://learn.microsoft.com/fr-fr/java/openjdk/download#openjdk-21) (choisir l'installeur `.msi` pour Windows x64).
+
+#### 2. Configurer JAVA_HOME
+1. Cherchez "Modifier les variables d'environnement système" dans Windows.
+2. Cliquez sur **Variables d'environnement**.
+3. Dans **Variables système**, cliquez sur **Nouvelle** :
+    *   Nom : `JAVA_HOME`
+    *   Valeur : Le chemin d'installation (ex: `C:\Program Files\Microsoft\jdk-21.x.x-hotspot`)
+4. Dans la variable **Path**, ajoutez une nouvelle ligne : `%JAVA_HOME%\bin`.
+
+#### 3. Installer Maven
+*   **Via Terminal :**
+    ```powershell
+    winget install Apache.Maven
+    ```
+*   **Alternative (Wrapper) :** Dans le dossier `API_Gnotes`, vous pouvez utiliser directement `./mvnw` au lieu de `mvn`. Cela utilisera la version de Maven intégrée au projet.
+
+#### 4. Vérification
+Ouvrez un **nouveau** terminal et tapez :
+```powershell
+java -version  # Doit afficher version "21" (ou supérieur)
+mvn -version   # Doit s'exécuter sans erreur
 ```
-*Le fichier `.jar` généré se trouvera ensuite dans le dossier `target/`.*
-
-### 🧪 Tests
-
-Les tests unitaires ainsi que les tests de validation de l'interface graphique (via TestFX) peuvent être exécutés avec la commande suivante :
-
-```bash
-mvn test
-```
-
-### ⚠️ À savoir
-* Par défaut, l'application écoute sur le port local `9999` pour éviter l'ouverture multiple de l'interface simultanément.
-* Si le chargement de l'API échoue (`IpApi.yml` invalide ou absent), l'application s'arrêtera au lancement avec une erreur console.
 
 ---
 
-## 🌐 API (Backend) - API_Gnotes
+## 💡 Dépannage (Erreurs fréquentes)
 
-L'API sert de backend pour la synchronisation et l'accès centralisé aux données.
+### Erreur : `Unrecognized option: --add-exports`
+Si vous voyez cette erreur, c'est que votre terminal utilise **Java 8**.
+*   **Cause :** Le projet utilise des modules Java modernes. Java 8 ne comprend pas ces options et s'arrête immédiatement.
+*   **Solution :** Vérifiez votre `JAVA_HOME`. Tapez `echo $env:JAVA_HOME` dans PowerShell. Si cela pointe vers Java 8 (ou est vide), suivez l'étape **2. Configurer JAVA_HOME** ci-dessus.
 
-### Commandes utiles
+### Utilisation avec IntelliJ IDEA (Recommandé)
+Pour éviter de gérer les variables d'environnement manuellement :
+1. Ouvrez le projet dans IntelliJ.
+2. Allez dans `File` > `Project Structure` > `Project`.
+3. Assurez-vous que le **SDK** est réglé sur **21** (ou plus). Si vous ne l'avez pas, IntelliJ peut le télécharger pour vous via `Add SDK` > `Download JDK`.
 
-**Commande pour obtenir son token d'authentification :**
+---
+
+## 🛠️ Installation du projet
+
+1. **Cloner ou copier le projet** :
+   - Placez le dossier du projet dans votre répertoire de travail habituel.
+
+2. **Configuration de la Base de Données** :
+   - Créez une base de données MySQL nommée `gnotes_bdd` via phpMyAdmin (accessible via WAMP).
+   - L'API est configurée pour mettre à jour le schéma automatiquement, mais vous pouvez importer le script initial si nécessaire :
+     `API_Gnotes/src/main/java/com/stsau/slam2/API_Gnotes/gnote_bdd.sql`
+
+3. **Configuration de l'Environnement** :
+   - **Backend (API)** : Éditez `API_Gnotes/src/main/resources/application.properties` pour ajuster vos paramètres (URL, utilisateur, mot de passe).
+   - **Frontend (Client)** : Vérifiez le fichier `gnoteFX1.2/IpApi.yml` pour l'adresse de l'API :
+     ```yaml
+     api:
+       base_url: http://localhost:8080/api
+     ```
+
+---
+
+## 💻 Commandes à exécuter
+
+Voici les étapes pour lancer les deux composants du projet. Ouvrez **2 terminaux séparés** dans les dossiers respectifs :
+
+### 1. Lancer l'API (Backend)
 ```bash
-curl -X POST "localhost:8080/api/login" -H "Content-Type: application/json" -d "{\"username\": \"admin@lycee.local\", \"password\": \"password\"}" 
+cd API_Gnotes
+mvn spring-boot:run
 ```
-Ou :
-```bash
-curl -X POST "localhost:8080/api/login" -u admin@lycee.local
-```
+L'API sera accessible sur `http://localhost:8080`.
 
-**Commande pour récupérer des informations :**
+### 2. Lancer l'Application Client (Frontend)
 ```bash
-curl -X GET "localhost:8080/api/[page]" -H "Authorization: Bearer [TON_TOKEN]" -H "Content-Type: application/json"
+cd gnoteFX1.2
+mvn javafx:run
 ```
+> **Note :** Si vous lancez l'application depuis un IDE (IntelliJ/Eclipse), n'oubliez pas d'ajouter l'argument VM suivant :
+> `--enable-native-access=javafx.graphics`
+
+### 3. Compiler et Packager (Génération des JAR : Optionnel)
+```bash
+mvn clean package
+```
+Les fichiers générés se trouveront dans les dossiers `target/` de chaque module.
+
+---
+
+## 🧪 Tests
+
+- Exécutez les tests unitaires et d'interface avec :
+  ```bash
+  mvn test
+  ```
+- Pour les tests JavaFX (TestFX), assurez-vous que votre environnement graphique permet le focus sur les fenêtres lors de l'exécution.
+
+---
+
+## ⚠️ À savoir
+
+* L'application cliente utilise le port local `9999` pour garantir une instance unique.
+* Si l'API est injoignable au démarrage, l'application s'arrêtera avec un message d'erreur.
+* Les données locales sont stockées dans `user_data.json` et `sync_data.json` pour le mode déconnecté.
